# strafe

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/level/: level.rs
src/models/: cube.rs  mod.rs  position.rs
src/openai/: image_prompts.txt  prompts.txt
src/renderer/: buffer.rs  camera.rs  frame_buffer.rs  mod.rs  program.rs  renderer.rs  texture.rs  vertex_array.rs
src/ui/: ui.rs
src/world/: level.rs
