[package]
name = "learn_gl_with_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.29.1"
gl = "0.14.0"
thiserror = "1.0"
image = "*"
simple_logger = "4.0.0"
log = "0.4.17"
glam = "0.23.0"
